# mlo_onenote

./: .gitignore  LICENSE  MLO-to-OneNote.lnk  MLO_to_OneNote.py  OneNote_to_MLO.py  OneNote_to_MLO_gui.py  README.md  build_exe.py  gui.py  pyproject.toml
